--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Education and Job experiences</h2>
-							<p>My background is in the humanities. After a high-school diploma in arts (Liceo Artistico) I devoted my path to Art History. During University I started playing with digital graphic softwares such as Photoshop and Illustrator. To improve my skills I took a Web Design course at NABA, in Milan.</p>
-							<p>I got my first job as a graphic designer working for a startup named <a href="https://www.icastmodeling.com/">ICast</a>, active in the fashion field. After my master degree, I did an internship as English content editor for <a href="https://www.musement.com/us/">Musement</a>. Six month later I moved to Israel to work as Art Historian and Communication consultant for a Christian museum based in the Old City of Jerusalem, the <a href="https://www.terrasanctamuseum.org/en/">Terra Sancta Museum</a>.</p>
+							<p>My background is in the humanities. After a high-school diploma in arts (Liceo Artistico) I continued my path in Art History. During University I started playing with digital graphic software such as Photoshop and Illustrator. To improve my skills I attended a Web Design course at NABA, in Milan.</p>
+							<p>I got my first job as a graphic designer working for a startup named <a href="https://www.icastmodeling.com/">ICast</a>, active in the fashion field. After my master degree, I did an internship as English Content Editor for <a href="https://www.musement.com/us/">Musement</a>. Six month later I moved to Israel to work as Art Historian and Communication Consultant for a museum based in the Old City of Jerusalem, the <a href="https://www.terrasanctamuseum.org/en/">Terra Sancta Museum</a>.</p>
 							<ul class="actions stacked">
-								<li><a href="https://www.linkedin.com/in/eleonora-musicco-0b9108162/" class="button">See my LinkedIn profile</a></li>
+							<p>I love learning new things and Online Open Courses are a great way to improve my skills. Check out my <a href="https://www.linkedin.com/in/eleonora-musicco-0b9108162/">LinkedIn profile</a> to find out more about me.</p>
+								<li><a href="#second" class="button">See what exites me</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -47,51 +48,51 @@
 					</section>
 
 				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="second">
 						<div class="content">
 							<h2>Coding and I</h2>
-							<p>My story with coding began many years ago, with my first MSN blog. There I met HTML for the first time.
-							We lost touch for a few years, but we never completely forgot.
-							While living in Israel I bought a course on Udemy's Frontend development.
-							It wasn't well done, and I never completed it, but it forced me to look
-							around for other masters. That's how I found
+							<p>My adventure with coding began many years ago, having fun with my MSN blog. There I met HTML for the first time.
+							We lost touch for a few years, but we've never completely forgotten each other.
+							While living in Israel I bought a Udemy course about frontend development.
+							I didn't like the teaching method, and I never completed it, but this forced me to look
+							around for other Masters. That's how I found
 							<a href="https://www.freecodecamp.org/learn/">FreeCodeCamp</a> and learned to rely on StackOverFlow as an oracle.
 						So far I've completed the path of <b>Responsive Web Design</b> and managed
-						to build some projects of my own (you can find them below on CodePen), but...it's still a long way to the top!</p>
+						to build some projects of my own which you can find below, but...it's still a long way to the top!</p>
+						<li><a href="#third" class="button">Check out my projects</a></li>
 						</div>
 						<div class="image">
 							<img src="images/spotlight02.jpg" alt="Photo by Adi Goldstein on Unsplash" />
 						</div>
 					</section>
 
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="third">
 						<div class="content">
 							<h2>Projects I'm working on</h2>
-							<p>To complete FreeCodeCamp Responsive Web Design Certification I'm working to develop some
-							web pages, starting from simple to more complicated and resposive ones. In the meantime, I started aproaching to
-						JavaScript and decide to create another little project to put into action what I've learned.</p>
+							<p>To complete the FreeCodeCamp Responsive Web Design Certification, I'm working to develop some static 
+							web pages, starting from simple and evolving to more complicated and resposive ones. In the meantime, I started aproaching JavaScript and decided to create another little project to put what I've learned into action.</p>
 
 						<a href="https://codepen.io/e_mu/full/wvKovmL" target="_blank"><h3>Tribute page</h3></a>
 						<p>The first challange was to build a simple tribute page. I chose an icon of Italian design: the <i>Lettera22</i>
-						Olivetti. Graphic choices were made following the style of the Lettera22: round corners, light colors and a title that
+						by Olivetti. Graphic choices were made following the style of the Lettera22: round corners, light colors and a title that
 					imitates the keyboard of the typewriter. This last one thing was my very first aproach in creating shapes with CSS.
-				It was not required to build a responsive page, but I tried to do my best to create a page that looks good on quite all the devices.
+				It was not required to build a responsive page, but I tried to do my best to create a page that looks good on most devices.
 			Still this project can't really be considered responsive.</p>
 
 						<a href="https://codepen.io/e_mu/full/wvKdLpP" target="_blank"><h3>Survey Form</h3></a>
-						<p>This second challange was to create a survey form. You'll see that the web design is turning a bit more complex, with
+						<p>This second challange was to create a survey form. You will see that the web design is turning a bit more complex, with
 						a background image and a second layer in front of it, accomplished using pseudo element "::before". I tried to do my best to
-					make this project responsive and, in the end, I'm quite satisfied with that.</p>
+					make this project responsive and, in the end, I'm quite satisfied with the outcome.</p>
 
 						<a href="https://knl9d.csb.app/" target="_blank"><h3>WebApp "Name2Numebers"</h3></a>
-						<p>This project was born by a challange launched by my math-lover boyfriend. He asked me to create an easy website to
-						calculate the numerical value of his name. Of course the main issue was to develop the JS codes (in fact the "graphic side" was quite left apart).
+						<p>This project was born by a challange launched by my math-lover boyfriend. He asked me to create a quick website to
+						calculate the numerical value of his name. Of course the main issue was to develop the JS code (in fact the "graphic side" was not a priority here).
 						As a newbie I had to make many online researches and that was still not enough to accomplish my final goal:
 						create a two-pages website where data are transferred from the home page to the
-				result page. To resolve the issue I asked for help to a frontend developer friend so this can be definitely considered a 6hands project.</p>
+				result page. To resolve the issue I asked for help to a frontend developer friend so this can be definitely considered a 6-hands project.</p>
 
-						<a href="" target="_blank"><h3>Landing page</h3></a>
-						<p>This is another FreeCodeCamp challange and I'm still working on it, so I will wait to comment it untill it's done ;D</p>
+						<a href="#" target="_blank"><h3>Landing page</h3></a>
+						<p>This is another FreeCodeCamp challange that I'm working on, so stay tuned for more ;D</p>
 
 						</div>
 						<div class="image">
@@ -103,7 +104,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Skills</h2>
-							<p>These are, in a nutshell, things that I've learned doing so far and that describe me a bit.</p>
+							<p>These are, in a nutshell, things that I've learned so far and that describe me a bit.</p>
 							<div class="items style1 medium onscroll-fade-in">
 							<!--	<section>
 									<span class="icon solid style2 major fa-save"></span>
@@ -125,7 +126,7 @@
 								<section>
 									<span class="icon solid style2 major fa-chart-bar"></span>
 									<p>
-										Google Analytics<br/>Microsoft Excell<br/>
+										Google Analytics<br/>Microsoft Excel<br/>
 									</p>
 									</section>
 								<!--<section>
@@ -338,7 +339,7 @@
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
-							<p>If you liked what you saw...just keep in touch!</p>
+							<p>If you liked what you saw...let's keep in touch!</p>
 							<ul class="icons">
 								<li><a href="https://www.instagram.com/nori_mu/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.linkedin.com/in/eleonora-musicco-0b9108162/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
