--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Story by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>EleonoraMusicco</title>
@@ -36,9 +31,9 @@
 						<div class="content">
 							<h2>Education and Job experiences</h2>
 							<p>My background is in the humanities. After a high-school diploma in arts (Liceo Artistico) I continued my path in Art History. During University I started playing with digital graphic software such as Photoshop and Illustrator. To improve my skills I attended a Web Design course at NABA, in Milan.</p>
-							<p>I got my first job as a graphic designer working for a startup named <a href="https://www.icastmodeling.com/">ICast</a>, active in the fashion field. After my master degree, I did an internship as English Content Editor for <a href="https://www.musement.com/us/">Musement</a>. Six month later I moved to Israel to work as Art Historian and Communication Consultant for a museum based in the Old City of Jerusalem, the <a href="https://www.terrasanctamuseum.org/en/">Terra Sancta Museum</a>.</p>
+							<p>I got my first job as a graphic designer working for a startup named <a href="https://www.icastmodeling.com/" target="_blank">ICast</a>, active in the fashion field. After my master degree, I did an internship as English Content Editor for <a href="https://www.musement.com/us/" target="_blank">Musement</a>. Six month later I moved to Israel to work as Art Historian and Communication Consultant and Social Media Manager for a museum based in the Old City of Jerusalem, the <a href="https://www.terrasanctamuseum.org/en/" target="_blank">Terra Sancta Museum</a>.</p>
 							<ul class="actions stacked">
-							<p>I love learning new things and Online Open Courses are a great way to improve my skills. Check out my <a href="https://www.linkedin.com/in/eleonora-musicco-0b9108162/">LinkedIn profile</a> to find out more about me.</p>
+							<p>I love learning new things and Open Online Courses are a great way to improve my skills. Check out my <a href="https://www.linkedin.com/in/eleonora-musicco-0b9108162/" target="_blank">LinkedIn profile</a> to find out more about me.</p>
 								<li><a href="#second" class="button">See what exites me</a></li>
 							</ul>
 						</div>
@@ -56,7 +51,7 @@
 							While living in Israel I bought a Udemy course about frontend development.
 							I didn't like the teaching method, and I never completed it, but this forced me to look
 							around for other Masters. That's how I found
-							<a href="https://www.freecodecamp.org/learn/">FreeCodeCamp</a> and learned to rely on StackOverFlow as an oracle.
+							<a href="https://www.freecodecamp.org/learn/" target="_blank">FreeCodeCamp</a> and learned to rely on StackOverFlow as an oracle.
 						So far I've completed the path of <b>Responsive Web Design</b> and managed
 						to build some projects of my own which you can find below, but...it's still a long way to the top!</p>
 						<li><a href="#third" class="button">Check out my projects</a></li>
@@ -341,8 +336,8 @@
 						<div class="inner">
 							<p>If you liked what you saw...let's keep in touch!</p>
 							<ul class="icons">
-								<li><a href="https://www.instagram.com/nori_mu/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://www.linkedin.com/in/eleonora-musicco-0b9108162/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.instagram.com/nori_mu/" class="icon brands style2 fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.linkedin.com/in/eleonora-musicco-0b9108162/" class="icon brands style2 fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
 								<!--<li><a href="musicco.eleonora@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>-->
 							</ul>
 							<p>&copy; EMU2020. <br/>Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
