--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<p>I got my first job as a graphic designer working for a startup named <a href="https://www.icastmodeling.com/" target="_blank">ICast</a>, active in the fashion field. After my master degree, I did an internship as English Content Editor for <a href="https://www.musement.com/us/" target="_blank">Musement</a>. Six month later I moved to Israel to work as Art Historian and Communication Consultant and Social Media Manager for a museum based in the Old City of Jerusalem, the <a href="https://www.terrasanctamuseum.org/en/" target="_blank">Terra Sancta Museum</a>.</p>
 							<ul class="actions stacked">
 							<p>I love learning new things and Open Online Courses are a great way to improve my skills. Check out my <a href="https://www.linkedin.com/in/eleonora-musicco-0b9108162/" target="_blank">LinkedIn profile</a> to find out more about me.</p>
-								<li><a href="#second" class="button">See what exites me</a></li>
+								<li><a href="#second" class="button">See what excites me</a></li>
 							</ul>
 						</div>
 						<div class="image">
