--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
 							<p>If you liked what you saw...let's keep in touch!</p>
 							<ul class="icons">
 								<li><a href="https://www.instagram.com/nori_mu/" class="icon brands style2 fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/EleonoraMusic" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/eleonora-musicco-0b9108162/" class="icon brands style2 fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
 								<!--<li><a href="musicco.eleonora@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>-->
 							</ul>
