--- a/index.html
+++ b/index.html
@@ -8,144 +8,153 @@
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 <body class="is-preload">
-
-	<!-- Wrapper -->
-		<div id="wrapper" class="divided">
-
-			<!-- One -->
-				<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
-					<div class="content">
-						<h1>Hello world!</h1>
-						<p class="major">I'm Eleonora :) <br/>Art Historian, content creator and aspiring frontend developer...but basically a super-curious human being.</p>
-						<ul class="actions stacked">
-						<li><a href="#first" class="button big wide smooth-scroll-middle">Discover more about me</a></li>
-						</ul>
-					</div>
-					<div class="image">
-						<img src="images/banner.jpg" alt="Photo by Luke Ellis-Craven on Unsplash" />
-					</div>
-				</section>
-
-			<!-- Two -->
-				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
-					<div class="content">
-						<h2>Education and Job experiences</h2>
-						<p>My background is in the humanities. After a high-school diploma in arts (Liceo Artistico) I continued my path in Art History. During University I started playing with digital graphic software such as Photoshop and Illustrator. To improve my skills I attended a Web Design course at NABA, in Milan.</p>
-						<p>I got my first job as a graphic designer working for a startup named <a href="https://www.icastmodeling.com/" target="_blank">ICast</a>, active in the fashion field. After my master degree, I did an internship as English Content Editor for <a href="https://www.musement.com/us/" target="_blank">Musement</a>. Six month later I moved to Israel to work as Art Historian and Communication Consultant and Social Media Manager for a museum based in the Old City of Jerusalem, the <a href="https://www.terrasanctamuseum.org/en/" target="_blank">Terra Sancta Museum</a>.</p>
-						<ul class="actions stacked">
-						<p>I love learning new things and Open Online Courses are a great way to improve my skills. Check out my <a href="https://www.linkedin.com/in/eleonora-musicco-0b9108162/" target="_blank">LinkedIn profile</a> to find out more about me.</p>
-							<li><a href="#second" class="button big wide smooth-scroll-middle">See what excites me</a></li>
-						</ul>
-					</div>
-					<div class="image">
-						<img src="images/spotlight01.jpg" alt="Photo by Siora Photography on Unsplash" />
-					</div>
-				</section>
-
-			<!-- Three -->
-				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="second">
-					<div class="content">
-						<h2>Coding and I</h2>
-						<p>My adventure with coding began many years ago, having fun with my MSN blog. There I met HTML for the first time.
-						We lost touch for a few years, but we've never completely forgotten each other.
-						While living in Israel I bought a Udemy course about frontend development.
-						I didn't like the teaching method, and I never completed it, but this forced me to look
-						around for other Masters. That's how I found
-						<a href="https://www.freecodecamp.org/learn/" target="_blank">FreeCodeCamp</a> and learned to rely on StackOverFlow as an oracle.
-						So far I've completed the path of <b>Responsive Web Design</b> and managed
-						to build some projects of my own which you can find below, but...it's still a long way to the top!</p>
-						<li><a href="#third" class="button big wide smooth-scroll-middle">Check out my projects</a></li>
-						</div>
-					<div class="image">
-				<img src="images/spotlight02.jpg" alt="Photo by Adi Goldstein on Unsplash" />
+	
+<!-- Wrapper -->
+	<div id="wrapper" class="divided">
+<!-- One -->
+	<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+		<div class="content">
+			<h1>Hello world!</h1>
+			<p class="major">I'm Eleonora :) <br/>Art Historian, content creator and aspiring frontend developer...but basically a super-curious human being.</p>
+				<ul class="actions stacked">
+					<li><a href="#first" class="button big wide smooth-scroll-middle">Discover more about me</a></li>
+				</ul>
+		</div>
+			<div class="image">
+				<img src="images/banner.jpg" alt="Photo by Luke Ellis-Craven on Unsplash" />
 			</div>
-				</section>
+	</section>
+<!-- Two -->
+	<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+		<div class="content">
+			<h2>Education and Job experiences</h2>
+			<p>My background is in the humanities. After a high-school diploma in arts (Liceo Artistico) I continued my path in Art History. During University I started playing with digital graphic software such as Photoshop and Illustrator. To improve my skills I attended a Web Design course at NABA, in Milan.</p>
+			<p>I got my first job as a graphic designer working for a startup named <a href="https://www.icastmodeling.com/" target="_blank">ICast</a>, active in the fashion field. After my master degree, I did an internship as English Content Editor for <a href="https://www.musement.com/us/" target="_blank">Musement</a>. Six month later I moved to Israel to work as Art Historian and Communication Consultant and Social Media Manager for a museum based in the Old City of Jerusalem, the <a href="https://www.terrasanctamuseum.org/en/" target="_blank">Terra Sancta Museum</a>.</p>
+			<p>I love learning new things and Open Online Courses are a great way to improve my skills. Check out my <a href="https://www.linkedin.com/in/eleonora-musicco-0b9108162/" target="_blank">LinkedIn profile</a> to find out more about me.</p>
+				<ul class="actions stacked">
+					<li><a href="#second" class="button big wide smooth-scroll-middle">See what excites me</a></li>
+				</ul>
+		</div>
+			<div class="image">
+				<img src="images/spotlight01.jpg" alt="Photo by Siora Photography on Unsplash" />
+			</div>
+	</section>
 
-				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="third">
-					<div class="content">
-						<h2>Projects I'm working on</h2>
-						<p>To complete the FreeCodeCamp Responsive Web Design Certification, I'm working to develop some static 
-						web pages, starting from simple and evolving to more complicated and resposive ones. In the meantime, I started aproaching JavaScript and decided to create another little project to put what I've learned into action.</p>
-
-					<a href="https://codepen.io/e_mu/full/wvKovmL" target="_blank"><h3>Tribute page</h3></a>
-					<p>The first challange was to build a simple tribute page. I chose an icon of Italian design: the <i>Lettera22</i>
-					by Olivetti. Graphic choices were made following the style of the Lettera22: round corners, light colors and a title that
+<!-- Three -->
+	<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="second">
+		<div class="content">
+			<h2>Coding and I</h2>
+				<p>My adventure with coding began many years ago, having fun with my MSN blog. There I met HTML for the first time.
+				We lost touch for a few years, but we've never completely forgotten each other.
+				While living in Israel I bought a Udemy course about frontend development.
+				I didn't like the teaching method, and I never completed it, but this forced me to look
+				around for other Masters. That's how I found
+				<a href="https://www.freecodecamp.org/learn/" target="_blank">FreeCodeCamp</a> and learned to rely on StackOverFlow as an oracle.
+				So far I've completed the path of <b>Responsive Web Design</b> and managed
+				to build some projects of my own which you can find below, but...it's still a long way to the top!</p>
+			<ul class="actions stacked">
+				<li><a href="#third" class="button big wide smooth-scroll-middle">Check out my projects</a></li>
+			</ul>
+		<div class="image">
+			<img src="images/spotlight02.jpg" alt="Photo by Adi Goldstein on Unsplash" />
+		</div>
+	</section>
+		
+<!--Four-->
+	<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="third">
+		<div class="content">
+			<h2>Projects I'm working on</h2>
+				<p>To complete the FreeCodeCamp Responsive Web Design Certification, I'm working to develop some static 
+				web pages, starting from simple and evolving to more complicated and resposive ones. In the meantime, I started aproaching JavaScript and decided to create another little project to put what I've learned into action.</p>
+			
+			<!--#1-->
+			
+			<a href="https://codepen.io/e_mu/full/wvKovmL" target="_blank"><h3>Tribute page</h3></a>
+				<p>The first challange was to build a simple tribute page. I chose an icon of Italian design: the <i>Lettera22</i>
+				by Olivetti. Graphic choices were made following the style of the Lettera22: round corners, light colors and a title that
 				imitates the keyboard of the typewriter. This last one thing was my very first aproach in creating shapes with CSS.
-			It was not required to build a responsive page, but I tried to do my best to create a page that looks good on most devices.
-		Still this project can't really be considered responsive.</p>
-
-					<a href="https://codepen.io/e_mu/full/wvKdLpP" target="_blank"><h3>Survey Form</h3></a>
-					<p>This second challange was to create a survey form. You will see that the web design is turning a bit more complex, with
-					a background image and a second layer in front of it, accomplished using pseudo element "::before". I tried to do my best to
+				It was not required to build a responsive page, but I tried to do my best to create a page that looks good on most devices.
+				Still this project can't really be considered responsive.</p>
+			
+			<!--#2-->
+		
+			<a href="https://codepen.io/e_mu/full/wvKdLpP" target="_blank"><h3>Survey Form</h3></a>
+				<p>This second challange was to create a survey form. You will see that the web design is turning a bit more complex, with
+				a background image and a second layer in front of it, accomplished using pseudo element "::before". I tried to do my best to
 				make this project responsive and, in the end, I'm quite satisfied with the outcome.</p>
 
-					<a href="https://knl9d.csb.app/" target="_blank"><h3>WebApp "Name2Numebers"</h3></a>
-					<p>This project was born by a challange launched by my math-lover boyfriend. He asked me to create a quick website to
-					calculate the numerical value of his name. Of course the main issue was to develop the JS code (in fact the "graphic side" was not a priority here).
-					As a newbie I had to make many online researches and that was still not enough to accomplish my final goal:
-					create a two-pages website where data are transferred from the home page to the
-			result page. To resolve the issue I asked for help to a frontend developer friend so this can be definitely considered a 6-hands project.</p>
+			<!--#3-->
+			
+			<a href="https://knl9d.csb.app/" target="_blank"><h3>WebApp "Name2Numebers"</h3></a>
+				<p>This project was born by a challange launched by my math-lover boyfriend. He asked me to create a quick website to
+				calculate the numerical value of his name. Of course the main issue was to develop the JS code (in fact the "graphic side" was not a priority here).
+				As a newbie I had to make many online researches and that was still not enough to accomplish my final goal:
+				create a two-pages website where data are transferred from the home page to the
+				result page. To resolve the issue I asked for help to a frontend developer friend so this can be definitely considered a 6-hands project.</p>
 
-					<a href="#" target="_blank"><h3>Landing page</h3></a>
-					<p>This is another FreeCodeCamp challange that I'm working on, so stay tuned for more ;D</p>
+					
+			<!--#4-->
+			<a href="#" target="_blank"><h3>Landing page</h3></a>
+				<p>This is another FreeCodeCamp challange that I'm working on, so stay tuned for more ;D</p>
 
-					</div>
-					<div class="image">
-						<img src="images/spotlight03.jpg" alt="Photo by Roozbeh Eslami on Unsplash" />
-					</div>
-				</section>
+			</div>
+		<div class="image">
+			<img src="images/spotlight03.jpg" alt="Photo by Roozbeh Eslami on Unsplash" />
+		</div>
+	</section>
 
-			<!-- Six -->
-				<section class="wrapper style1 align-center">
-					<div class="inner">
-						<h2>Skills</h2>
-						<p>These are, in a nutshell, things that I've learned so far and that describe me a bit.</p>
-						<div class="items style1 medium onscroll-fade-in">
-						<!--	<section>
+<!-- Five -->
+	<section class="wrapper style1 align-center">
+		<div class="inner">
+			<h2>Skills</h2>
+				<p>These are, in a nutshell, things that I've learned so far and that describe me a bit.</p>
+					<div class="items style1 medium onscroll-fade-in">
+						<!--not in use	<section>
 								<span class="icon solid style2 major fa-save"></span>
 								<h3>Ipsum</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 							</section> -->
-							<section>
-								<span class="icon solid style2 major fa-cog"></span>
+					
+						<section>
+							<span class="icon solid style2 major fa-cog"></span>
 								<p>
 									HTML5<br/>CSS3<br/>JavaScript<br/>Wordpress<br/>
 								</p>
 							</section>
-							<section>
-								<span class="icon solid style2 major fa-desktop"></span>
+						<section>
+							<span class="icon solid style2 major fa-desktop"></span>
 								<p>
 									Adobe Illustrator<br/>Adobe Photoshop<br/>Procreate<br/>
 								</p>
 							</section>
-							<section>
-								<span class="icon solid style2 major fa-chart-bar"></span>
+						<section>
+							<span class="icon solid style2 major fa-chart-bar"></span>
 								<p>
 									Google Analytics<br/>Microsoft Excel<br/>
 								</p>
-								</section>
-							<!--<section>
-								<span class="icon solid style2 major fa-wifi"></span>
-								<h3>Amet</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-							</section> -->
-							<!--<section>
-								<span class="icon style2 major fa-paper-plane"></span>
-								<p></p>
-							</section> -->
-							<!--<section>
-								<span class="icon solid style2 major fa-sync-alt"></span>
-								<h3>Elit</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-							</section> -->
-							<section>
-								<span class="icon solid style2 major fa-hashtag"></span>
+							</section>
+						<!-- not in use <section>
+							<span class="icon solid style2 major fa-wifi"></span>
+							<h3>Amet</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+						</section> -->
+						<!--<section>
+							<span class="icon style2 major fa-paper-plane"></span>
+							<p></p>
+						</section> -->
+						<!--<section>
+							<span class="icon solid style2 major fa-sync-alt"></span>
+							<h3>Elit</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+						</section> -->
+						<section>
+							<span class="icon solid style2 major fa-hashtag"></span>
 								<p>
 									Social Media strategy<br/>Facebook and Instagram<br/>SEO Techniques<br/>MailChimp<br/>
 								</p>
 							</section>
-							<section>
-								<span class="icon style2 major fa-gem"></span>
+						<section>
+							<span class="icon style2 major fa-gem"></span>
 								<h3>I like:</h3>
 								<p>
 									Reading novels<br/>
@@ -156,7 +165,7 @@
 									Palestinian food<br/>
 								</p>
 							</section>
-							<!--<section>
+							<!-- not in use <section>
 								<span class="icon solid style2 major fa-bolt"></span>
 								<h3>Turpis</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
@@ -176,7 +185,7 @@
 				</section>
 
 
-				<!-- Gallery -->
+				<!-- Not in use Gallery -->
 
 					<!--<section class="wrapper style1 align-center">
 						<div class="inner">
@@ -332,19 +341,18 @@
 
 					</section> -->
 
-			<!-- Footer -->
-				<footer class="wrapper style1 align-center">
-					<div class="inner">
-						<p>If you liked what you saw...let's keep in touch!</p>
-						<ul class="icons">
-							<li><a href="https://www.instagram.com/nori_mu/" class="icon brands style2 fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/EleonoraMusic" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://www.linkedin.com/in/eleonora-musicco-0b9108162/" class="icon brands style2 fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
-							<!--<li><a href="musicco.eleonora@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>-->
-						</ul>
-						<p>&copy; EMU2020. <br/>Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</div>
-				</footer>
+<!-- Footer -->
+	<footer class="wrapper style1 align-center">
+		<div class="inner">
+			<p>If you liked what you saw...let's keep in touch!</p>
+			<ul class="icons">
+				<li><a href="https://www.instagram.com/nori_mu/" class="icon brands style2 fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+				<li><a href="https://github.com/EleonoraMusic" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+				<li><a href="https://www.linkedin.com/in/eleonora-musicco-0b9108162/" class="icon brands style2 fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
+			</ul>
+			<p>&copy; EMU2020. <br/>Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+		</div>
+	</footer>
 
 		</div>
 
