--- a/index.html
+++ b/index.html
@@ -159,8 +159,9 @@
 								<p>
 									Reading novels<br/>
 									Art History (and contemporary art too)
-									Pin on Pinterests</br/>
-									Freehand sketching</br/>
+									Pin on Pinterests<br/>
+									Freehand sketching<br/>
+									Non-Manic order<br/> 
 									Long walks<br/>
 									Palestinian food<br/>
 								</p>
