--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 								<h3>I like:</h3>
 								<p>
 									Reading novels<br/>
-									Art History (and contemporary art too)
-									Pin on Pinterests<br/>
+									Art History (and contemporary art too)<br/>
+									Pinning on Pinterests<br/>
 									Freehand sketching<br/>
 									Non-Manic order<br/> 
 									Long walks<br/>
