--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 	<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 		<div class="content">
 			<h2>Education and Job experiences</h2>
-			<p>My background is in the humanities. After a high-school diploma in arts (Liceo Artistico) I continued my path in Art History. During University I started playing with digital graphic software such as Photoshop and Illustrator. To improve my skills I attended a Web Design course at NABA, in Milan.</p>
-			<p>I got my first job as a graphic designer working for a startup named <a href="https://www.icastmodeling.com/" target="_blank">ICast</a>, active in the fashion field. After my master degree, I did an internship as English Content Editor for <a href="https://www.musement.com/us/" target="_blank">Musement</a>. Six month later I moved to Israel to work as Art Historian and Communication Consultant and Social Media Manager for a museum based in the Old City of Jerusalem, the <a href="https://www.terrasanctamuseum.org/en/" target="_blank">Terra Sancta Museum</a>.</p>
-			<p>I love learning new things and Open Online Courses are a great way to improve my skills. Check out my <a href="https://www.linkedin.com/in/eleonora-musicco-0b9108162/" target="_blank">LinkedIn profile</a> to find out more about me.</p>
-				<ul class="actions stacked">
-					<li><a href="#second" class="button big wide smooth-scroll-middle">See what excites me</a></li>
-				</ul>
+				<p>My background is in the humanities. After a high-school diploma in arts (Liceo Artistico) I continued my path in Art History. During University I started playing with digital graphic software such as Photoshop and Illustrator. To improve my skills I attended a Web Design course at NABA, in Milan.</p>
+				<p>I got my first job as a graphic designer working for a startup named <a href="https://www.icastmodeling.com/" target="_blank">ICast</a>, active in the fashion field. After my master degree, I did an internship as English Content Editor for <a href="https://www.musement.com/us/" target="_blank">Musement</a>. Six month later I moved to Israel to work as Art Historian and Communication Consultant and Social Media Manager for a museum based in the Old City of Jerusalem, the <a href="https://www.terrasanctamuseum.org/en/" target="_blank">Terra Sancta Museum</a>.</p>
+				<p>I love learning new things and Open Online Courses are a great way to improve my skills. Check out my <a href="https://www.linkedin.com/in/eleonora-musicco-0b9108162/" target="_blank">LinkedIn profile</a> to find out more about me.</p>
+			<ul class="actions stacked">
+				<li><a href="#second" class="button big wide smooth-scroll-middle">See what excites me</a></li>
+			</ul>
 		</div>
 			<div class="image">
 				<img src="images/spotlight01.jpg" alt="Photo by Siora Photography on Unsplash" />
@@ -55,9 +55,10 @@
 			<ul class="actions stacked">
 				<li><a href="#third" class="button big wide smooth-scroll-middle">Check out my projects</a></li>
 			</ul>
-		<div class="image">
-			<img src="images/spotlight02.jpg" alt="Photo by Adi Goldstein on Unsplash" />
-		</div>
+		</div>	
+			<div class="image">
+				<img src="images/spotlight02.jpg" alt="Photo by Adi Goldstein on Unsplash" />
+			</div>
 	</section>
 		
 <!--Four-->
@@ -158,8 +159,8 @@
 								<h3>I like:</h3>
 								<p>
 									Reading novels<br/>
-									Art History (and contemporary art too)<br/>
-									Pinning on Pinterests<br/>
+									Art History<br/>
+									Pinning on Pinterest<br/>
 									Freehand sketching<br/>
 									Non-Manic order<br/> 
 									Long walks<br/>
