--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
 
 					
 			<!--#4-->
-			<a href="#" target="_blank"><h3>Landing page</h3></a>
-				<p>This is another FreeCodeCamp challange that I'm working on, so stay tuned for more ;D</p>
+			<a href="https://codepen.io/e_mu/full/rNOKBRQ" target="_blank"><h3>Landing page</h3></a>
+				<p>Definitely my first real project! While working on this, I discovered amazing things such as Sass and Sass variables, flexboxes and icons with FontAwesome.
+			But the most important achievement has been starting thinking in a mobile-first way!</p>
 
 			</div>
 		<div class="image">
