--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
 			<a href="https://codepen.io/e_mu/full/rNOKBRQ" target="_blank"><h3>Landing page</h3></a>
 				<p>Definitely my first real project! While working on this, I discovered amazing things such as Sass and Sass variables, flexboxes and icons with FontAwesome.
 			But the most important achievement has been starting thinking in a mobile-first way!</p>
+			
+			<!--#5-->
+			<a href="https://codepen.io/e_mu/full/ExVdwYK" target="_blank"><h3>Techinical documentation page</h3></a>
+				<p>Another project to gain the FreeCodeCamp certification. This time, user stories' requests were not so difficult to accomplish, so I decided to turns things a little bit more interesting adding a dropdown menu with a hamburger icon for small screens.
+					The menu was built following <a href="https://www.youtube.com/watch?v=8QKOaTYvYUA" target="_blank">this tutorial</a> by one of my many YouTube guru, Kevin Powell. Finally, this page is fully responsive!</p>
+			
 
 			</div>
 		<div class="image">
